nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    # Удаление селектора app: nginx, если не используется
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
